Erweiterung mit Formeln aus Übungen 1-4

--- a/sections/VL1-eldynGrundgesetzte.tex
+++ b/sections/VL1-eldynGrundgesetzte.tex
@@ -96,8 +96,8 @@ $\vec{r_{0}} = \frac{\vec{r}}{|\vec{r}|} $ - Einheitsvektor \\
 Die wichtige Annahme: & $r >> R_1$ \\
 Die geometrischen Daten: & $R_{1}$ = 10mm, r = 100mm, L = 1000mm\\
 Die elektrischen Daten:& U = 1V, I = 1A  \\
-Die Kräfte pro Längeneinheit: &$F_{e} = \frac{\pi \cdot \epsilon_{0} \cdot U^{2}}{2 \cdot r \cdot (ln\frac{r-R_{1}}{R_{1}})^{2}} = 2.88 \cdot 10^{11}$ $(\frac{N}{m})$ \\
-&$F_{m} = \frac{\mu_{0} \cdot I^{2}}{2 \cdot \pi \cdot r} = 2.00 \cdot 10^-6$ $(\frac{N}{m})$ \\
+Die Kräfte pro Längeneinheit: &$F_{e} = \frac{\pi \cdot \epsilon_{0} \cdot U^{2}}{2 \cdot r \cdot (ln\frac{r-R_{1}}{R_{1}})^{2}} = 2.88 \cdot 10^{-11}$ $(\frac{N}{m})$ \\
+&$F_{m} = \frac{\mu_{0} \cdot I^{2}}{2 \cdot \pi \cdot r} = 2.00 \cdot 10^{-6}$ $(\frac{N}{m})$ \\
 \end{tabular}
 
 Die wichtigsten Schlussfolgerungen:
