--- a/sections/VL45-GSM.tex
+++ b/sections/VL45-GSM.tex
@@ -94,7 +94,9 @@ $\omega \cdot \Psi \cdot I_a$ -  Mechanische Leistung \\
 
 $P_mech = \omega \cdot M$ ($W$), wobei M das Drehmoment ist. \\
 
-$M = \Psi \cdot I_a$ ($Nm$)
+$M = \Psi \cdot I_a$ ($Nm$) \\
+
+$\Psi = frac{U}{2 \pi \frac{n_0}{60}} $ 
 \end{minipage}
 
 \subsection{Ankerrückwirkung}
@@ -215,7 +217,9 @@ $\frac{M}{M_a} = 1 - \frac{n}{n_0}$\\
 
 $M_a = \frac{U \cdot \Psi}{R_a}$\\
 
-$n_0 = \frac{U}{2 \cdot \pi \cdot \Psi}$
+$n_0 = \frac{U}{2 \cdot \pi \cdot \Psi}$ \\
+
+$\Psi = frac{U}{2 \pi \frac{n_0}{60}} $ 
 \end{minipage}
 
 \subsubsection{Reihenschluss}
@@ -280,8 +284,12 @@ Gemäss den Grundgleichungen sind die Kennlinien $I_a(n)$ und $M(n)$ von $R_a$, 
 
 \subsection{Anlauf}
 Wegen der Stabilität des Netzwerks muss der Anlaufstrom der Gleichstrommotoren mit einer Leistung über 2 kW begrenzt werden. Ein beispiel der Anlaufstrombegrenzung durch die $R_v$-Regelung sieht so aus: \\
-
-\includegraphics[width = 0.8 \linewidth]{./Pics/VL45/Anlauf}
+\begin{minipage}{0.75 \linewidth}
+\includegraphics[width = \linewidth]{./Pics/VL45/Anlauf}
+\end{minipage}
+\begin{minipage}{0.25 \linewidth}
+$I_{Anlauf} = \frac{U}{R_a + R_v}$
+\end{minipage}
 
 \subsection{Anwendungsbereiche und Schlussanmerkungen}
 \begin{itemize}
