Update von Formeln + Update Readme

--- a/sections/VL1011-Synchronmaschine.tex
+++ b/sections/VL1011-Synchronmaschine.tex
@@ -66,7 +66,7 @@ $cos\varphi = -sin\alpha$\\
 
 Generatorbetrieb: $\delta < 0$ \\
 
-$d = -U_p \cdot sind\delta = X_d\cdot I_1 \cdot sin\alpha = -X_d\cdot I_1\cdot cos\varphi$ \\
+$d = -U_p \cdot sin\delta = X_d\cdot I_1 \cdot sin\alpha = -X_d\cdot I_1\cdot cos\varphi$ \\
 
 $P = 3 \cdot U_1 \cdot I_1 \cdot cos\varphi$\\
 
@@ -75,6 +75,8 @@ $P(\delta) = 3 \frac{U_p\cdot U_1}{X_d} sin\delta$\\
 Generator: $P(\delta) = P_{mech} - P_v = \omega \cdot M - P_v$ \\
 
 Motor: $P(\delta) = P_{mech} + P_v = \omega \cdot M + P_v$ \\
+
+$(X_d \cdot I_1)^2 = U_1^2 + U_p^2 -2 \cdot U_1 \cdot U_p \cdot cos(\delta)$
 \end{minipage}
 
 \subsection{Erreger-Regulierkennlinien}
