--- a/sections/VL1213-Asynchronmaschine.tex
+++ b/sections/VL1213-Asynchronmaschine.tex
@@ -25,12 +25,13 @@
 \item Stillstand: s = 1
 \item induzierter Strom des Läufers: $I_2 = \frac{U_{i20}}{\sqrt{(\frac{R_2}{s})^2 + X_{2\sigma}^2}}$
 \item Stillstand: $s = 1$,$f_2 = f_1$, $I_2 = I_{2max} = \frac{U_{i20}}{\sqrt{R_2^2 + X_{2\sigma}^2}}$
-\item Stillstand: $s = 0$,$f_2 = 0$, $I_2 = I_{2min} = 0$
+\item Synchroner Lauf: $s = 0$,$f_2 = 0$, $I_2 = I_{2min} = 0$
 \item Drehmoment: $M = \frac{1}{2\pi n_1} \frac{P_{cu2}}{s} = \frac{q_2}{2\pi n_1} I_2^2 \frac{R_2}{s} = \frac{q_2}{2 \pi n_1} \frac{U_{i20}^2}{\frac{R_2}{s}^2 + X_{2\sigma}^2} \frac{R_2}{s}$
 \item Drehmoment Anlauf: $M = \frac{q_1}{2 \pi n_1} \cdot \frac{U_1^2}{\frac{R'_2}{s}^2 + X'^2_{2\sigma}} \cdot \frac{R'_2}{s}$
 \item Schlupf Kippmoment: $s_k = \frac{R'_2}{X'_{2\sigma}}$
 \item Kippmoment: $M_K = \frac{q_1}{4\pi n_1} \cdot \frac{U_1^2}{X'_{2\sigma}}$
 \item Leerlaufstrom: $\underline{I_0} = \underline{I_{fe}} + \underline{I_\mu}$
+\item Klossche Gleichung: $\frac{M}{M_K} = \frac{2}{\frac{s}{s_k} + \frac{s_k}{s}}$
 \end{itemize}
 \end{minipage}
 
