--- a/sections/VL1213-Asynchronmaschine.tex
+++ b/sections/VL1213-Asynchronmaschine.tex
@@ -9,13 +9,13 @@
 \end{minipage}
 
 \subsection{Funktion}
-\begin{minipage}{0.3 \linewidth}
+\begin{minipage}{0.4 \linewidth}
 \includegraphics[width = \linewidth]{./Pics/VL1213/Funktion}
 \includegraphics[width = \linewidth]{./Pics/VL1213/Funktion2}
 \includegraphics[width = \linewidth]{./Pics/VL1213/Funktion3}
 \includegraphics[width = \linewidth]{./Pics/VL1213/Funktion4}
 \end{minipage}
-\begin{minipage}{0.7 \linewidth}
+\begin{minipage}{0.6 \linewidth}
 \begin{itemize}
 \item Synchrone Drehzahl (Drehfeld): $n_1 = \frac{f_1}{p}$
 \item Drehzahl des Läufers: $n$
@@ -26,8 +26,10 @@
 \item induzierter Strom des Läufers: $I_2 = \frac{U_{i20}}{\sqrt{(\frac{R_2}{s})^2 + X_{2\sigma}^2}}$
 \item Stillstand: $s = 1$,$f_2 = f_1$, $I_2 = I_{2max} = \frac{U_{i20}}{\sqrt{R_2^2 + X_{2\sigma}^2}}$
 \item Synchroner Lauf: $s = 0$,$f_2 = 0$, $I_2 = I_{2min} = 0$
-\item Drehmoment: $M = \frac{1}{2\pi n_1} \frac{P_{cu2}}{s} = \frac{q_2}{2\pi n_1} I_2^2 \frac{R_2}{s} = \frac{q_2}{2 \pi n_1} \frac{U_{i20}^2}{\frac{R_2}{s}^2 + X_{2\sigma}^2} \frac{R_2}{s}$
+\item Drehmoment: $M = \frac{1}{2\pi n_1} \frac{P_{cu2}}{s} = \frac{q_2}{2\pi n_1} I_2^2 \frac{R_2}{s} = \frac{q_2}{2 \pi n_1} \frac{U_{i20}^2}{\frac({R_2}{s})^2 + X_{2\sigma}^2} \frac{R_2}{s}$
+\item ohmsche Rotorverluste: $P_{CU2} = q_2 \cdot I_2^2 \cdot R_2$
 \item Drehmoment Anlauf: $M = \frac{q_1}{2 \pi n_1} \cdot \frac{U_1^2}{\frac{R'_2}{s}^2 + X'^2_{2\sigma}} \cdot \frac{R'_2}{s}$
+\item Strangzahl q1 = Bei Drehstrom 3
 \item Schlupf Kippmoment: $s_k = \frac{R'_2}{X'_{2\sigma}}$
 \item Kippmoment: $M_K = \frac{q_1}{4\pi n_1} \cdot \frac{U_1^2}{X'_{2\sigma}}$
 \item Leerlaufstrom: $\underline{I_0} = \underline{I_{fe}} + \underline{I_\mu}$
